# UGC-Polls

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: manage.py
app/config/: asgi.py  settings.py  urls.py  wsgi.py
app/polls/: admin.py  cache.py  models.py  serializers.py  tests.py  urls.py  views.py
app/polls/management/commands/: seed_load_data.py
app/polls/migrations/: 0001_initial.py
